# Text-Editor-From-Scratch

./: CMakeLists.txt  Data.cpp  Data.h  Input.cpp  Input.h  Output.cpp  Output.h  README.md  Row.cpp  Row.h  Terminal.cpp  Terminal.h  fileIO.cpp  fileIO.h  main.cpp
